# evm-from-scratch-cpp

./: .gitignore  CMakeLists.txt  README.md  evm.cpp  main.cpp
include/: evm.hpp  memory.hpp  opcodes.hpp  stack.hpp  storage.hpp  types.hpp  utils.hpp
include/handlers/: op_arithmetic.hpp  op_memory.hpp  op_stack.hpp  op_storage.hpp  opcode_handlers.hpp
src/: evm.cpp  main.cpp  memory.cpp  stack.cpp  storage.cpp  utils.cpp
src/handlers/: op_arithmetic.cpp  op_stack.cpp  op_storage.cpp
